--- a/index.html
+++ b/index.html
@@ -1,10 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+	
+	<title>Чичерина Юлия</title>
+	<meta charset="utf-8">
+	<meta description="рокмузыкант Юлия Чичерина, профайл">
+	<meta keywords="Чичерина, «Ту-лу-ла», рок-группа">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<div class="page"> 
+         <header class="header">
+            <div class="header-container">
+               <h1>Юлия Чичерина</h1>
+            </div>
+         </header>
+         <main class="content">
+            <div class="content-container">
+               <section class="image">
+                  <div class="image-container">
+                     <img src="img/chicherina-14-02-17-305x175.jpg" alt="photo">
+                  </div>
+               </section>
+               <nav class="menu">
+                  <ul class="menu-container">
+                     <li><a href="#Биография">Биография</a></li>
+                     <li><a href="#Личная жизнь">Личная жизнь</a></li>
+                     <li><a href="#Творчество">Творчество</a></li>
+                     <li><a href="#Ссылки">Ссылки</a></li>
+                  </ul>
+               </nav>
+                  <section class="Biography">
+                     <h2 class="sectionText" id="Биография">Биография</h2>
+                      <p class="mainText">
+
+  <p>Родилась 7 августа 1978 года в Свердловске. В детстве увлекалась рисованием и пением, играла на гитаре и барабанах в разных школьных группах. Окончила музыкальное училище по классу эстрадного вокала. У Юлии есть старшая сестра Дина.</p>
+  <p>В 1997 году Чичерина основала в Екатеринбурге свой музыкальный коллектив под названием «Чичерина», в который помимо неё вошли музыканты: Азат Мухаметов, Александр Бурый и Александр Александров. С этим составом Чичерина получила всероссийскую известность с хитом «Ту-лу-ла». Днём рождения группы считается 1 июня 1997 года, когда она впервые выступила в екатеринбургском клубе «J-22». Затем коллектив принимал участие в нескольких музыкальных фестивалях в Западной Сибири. После того, как кассету с записями Чичериной отправили музыкальному продюсеру «Нашего радио» Михаилу Козыреву, группу пригласили на фестиваль мультиформатной отечественной музыки «Нашествие».</p>
+  <p>В 1999 году Чичерина заключила контракт с российской звукозаписывающей компанией «REAL Records» и переехала в Москву. Тогда же продюсером её группы стал Вадим Самойлов, лидер группы «Агата Кристи».</p>
+  <p>В 2000 году вышел первый альбом группы «Сны». На композиции «Ту-лу-ла» и «Жара» известным тогда клипмейкером и начинающим кинорежиссёром Тимуром Бекмамбетовым были сняты видеоклипы, транслировавшиеся на телеканале «Муз-ТВ». В 2001 году был выпущен второй альбом группы «Течение». В этом же году Чичерина снялась в роли рабыни-гладиаторши Дейдры в историческом боевике Тимура Бекмамбетова «Гладиатрикс».</p>
+  <p>В 2001 году Чичерина приняла гостевое участие в создании одной из композиций альбома группы «Би-2» «Мяу кисс ми», записав в дуэте с группой песню «Мой рок-н-ролл». 15 ноября 2002 года песня стала лауреатом премии «Золотой граммофон», а 5 июня 2003 года — лауреатом I ежегодной национальной телевизионной премии в области популярной музыки «Муз-ТВ» в номинации «Лучшая песня».</p>
+  <p>В 2004 году в группе произошли большие перемены, и от первоначального состава осталась только сама Чичерина. Она набрала новый состав музыкантов и записала третий студийный альбом под названием «Off/On».</p>
+  <p>После этого в жизни группы на несколько лет наступило некоторое затишье, за время которого Чичерина успела освоить режиссуру и видеосъёмку. Свой четвёртый альбом «Музыкальный фильм» 2006 года выпуска она полностью визуализировала, сняв клипы на каждую песню. Обозреватель журнала Rolling Stone Борис Барабанов поставил альбому 3 звезды из 5 и отметил, что новые песни «унаследовали от предыдущих работ лучшие черты», а сам альбом в целом — «далеко не самое позорное, что спето у нас девушками под гитары».</p>
+  <p>На этом эксперименты не закончились: уже в следующем году в свет вышел диск «Человек-птица». Эту работу критики назвали одним из самых концептуальных музыкальных произведений за последние годы.</p>
+  <p>В 2010 году песня Чичериной «Ту-лу-ла» вошла в саундтрек фильма Хулио Медема «Комната в Риме». К этому моменту состав группы обновился, коллектив выпустил несколько синглов, принял участие в проекте «Нашего радио» «Соль», записал трибьют для Аллы Пугачёвой и презентовал видеоклип на песню «Над Уралом». Этот трек был написан в соавторстве с группой «Смысловые галлюцинации» по мотивам автомобильной аварии, в которую Чичерина попала 9 марта 2010 года по дороге на гастроли в город Шадринск. В конце этого же года Чичерина выступила на сцене с группой «Би-2», приняв участие в нескольких концертах этой группы с симфоническим оркестром МВД России.</p>
+  <p>В 2010 году Чичерина выступила в Московском государственном театре эстрады и посетила Аргентину, где приняла участие в съёмках экстремальной телепрограммы Первого канала «Жестокие игры». В 2011 году Чичерина вернулась к сотрудничеству с группой «Смысловые галлюцинации», записав с ней свой новый сингл «Опасно». Продюсером диска стал Сергей Бобунец, а барабанщик Максим Митенков (который когда-то уже писал песни для группы «Чичерина», будучи в её составе) выступил соавтором одной композиции. На два трека из этого сингла — «Осколки» и «Опасно» — Чичерина самостоятельно сняла клипы. В этот же диск музыканты включили песню «Главная тема», которая прозвучала в фильме «Выкрутасы». В 2012 году Чичерина и Сергей Бобунец записали совместный трек «Нет, да».</p>
+  <p>По мотивам своего автомобильного путешествия в Тибет, которое состоялось осенью 2011 года, певица со своей группой создала концептуальную видео-музыкальную работу «Сказка о странствии и поиске счастья».</p>
+                  </section>
+                  <section class="Live">
+                     <h2 class="sectionText" id="Личная жизнь">Личная жизнь</h2>
+                      <p class="mainText">
+<p>                        
+  У Чичериной есть дочь Майя (1999), отец которой — Александр Бурый, бас-гитарист и саунд-продюсер первого состава группы «Чичерина», бывший бас-гитарист российской рок-группы «Смысловые галлюцинации».
+</p>
+<p>
+  Чичерина замужем за архитектором Сухрабом Раджабовым. Пара живёт в подмосковной деревне Княгинино, в трёхэтажном доме-кубе с многочисленными треугольными окнами, построенном по проекту Сухраба.
+</p>
+<p>
+  Чичерина любит путешествовать. Вместе со своим мужем она побывала в Монголии, США, ряде стран Европы, Африки и Юго-Восточной Азии. А в рамках благотворительного автопробега «СПИД-СТОП» певица изъездила всю Россию. Осенью 2011 года совершила автомобильное путешествие в Тибет.
+</p>
+<p>
+  Чичерина держит дома многочисленных домашних животных. Занимается пчёлами, разводит крыс.
+</p>   
+                      </p>
+                  </section>
+                  <section class="Creativity">
+                     <h2 class="sectionText" id="Творчество">Творчество</h2>
+                      <p class="mainText">
+
+  Дискография<br>
+
+  Студийные альбомы<br>
+    2000 — «Сны»<br>
+    2001 — «Течение»<br>  
+    2004 — «Off / On»<br>  
+    2006 — «Музыкальный фильм»<br>  
+    2007 — «Человек-птица»<br>
+    2015 — «Сказка о странствии и поиске счастья»<br>
+    2017 — «#Войнаимир»<br> 
+Синглы
+
+  2000 — «Ту-лу-ла»<br>
+    2001 — «Дорога»<br>
+    2009 — «Шила платье»<br>   
+    2009 — «Christmas»<br>
+    2011 — «Опасно»<br>
+    2016— «На передовой»<br>   
+    2017— «Моя Спарта»<br>   
+Другие песни
+КИНОпробы
+    2000 — Прохожий<br>
+    2000 — Когда твоя девушка больна<br>
+    Мяу кисс ми<br>
+    2003 — Мой рок-н-ролл (с Би-2)<br>
+   Не вошедшие в официальные альбомы<br>   
+   2000 — В лунном сиянии<br> 
+    2000 — Ветер перемен<br> 
+Концертные альбомы<br>
+    2002 — «Точки»<br>
+               </section> 
+               <section class="Links">
+                  <h2 class="sectionText" id="Ссылки">Ссылки</h2>
+                     <p class="mainText">
+                     <ul>
+                     <li><a href="https://vk.com/gruppa_chicherina" target="_blank">Официальная страница Чичерина, Юлия Дмитриевна</a> в социальной сети <a href="https://ru.wikipedia.org/wiki/ВКонтакте" target="_blank">«ВКонтакте»</a></li>
+                     <li><a href="http://www.chicherina.info/" target="_blank">www.chicherina.info</a> - официальный сайт Юлии Чичериной</li>
+                     <li><a href="https://music.yandex.ru/artist/218067/" target="_blank">Песни Юлии Чичериной</a> на <a href="https://ru.wikipedia.org/wiki/Яндекс.Музыка" target="_blank">"Яндекс.Музыке"</a></li>
+                      </ul>   
+                      </p>
+                  </section>   
+            </div>
+        	
+         </main>
+         <footer class="footer">
+         	<div class="footer-container">
+                                           <!--ничего не добавил-->
+            </div>
+         </footer> 
+	</div>
 </body>
 </html>
